force-app/main/default/objects/EWS__c/EWS__c.object-meta.xml
<CustomObject>
    <label>EWS</label>
    <nameField>
        <displayFormat>EWS-{0000}</displayFormat>
        <label>EWS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EWS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>