force-app/main/default/objects/EWS__c/fields/Adoption_Score__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Score__c</fullName>
    <inlineHelpText>The adoption health score is 1 of the 4 categories of the customer health score that is calculated by looking at data points that indicate the customers use of their software</inlineHelpText>
    <label>Adoption Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>