force-app/main/default/objects/EWS__c/fields/Commercial_Score__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Score__c</fullName>
    <inlineHelpText>The commercial health score is 1 of the 4 categories of the customer health score and is calculated by looking at the commercial customer data only</inlineHelpText>
    <label>Commercial Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>