force-app/main/default/objects/EWS__c/fields/Consultancy_Days__c.field-meta.xml
<CustomField>
    <fullName>Consultancy_Days__c</fullName>
    <label>Consultancy Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>