force-app/main/default/objects/EWS__c/fields/Customer_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health_Score__c</fullName>
    <inlineHelpText>The Health score that has been calculated through various customer data points. The health score can be broken down into 4 categories; Commercial, Adoption, Experience and Product</inlineHelpText>
    <label>Customer Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>