force-app/main/default/objects/EWS__c/fields/Escalations_Closed_2_years_ago__c.field-meta.xml
<CustomField>
    <fullName>Escalations_Closed_2_years_ago__c</fullName>
    <label>Escalations Closed 2 years ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>