force-app/main/default/objects/EWS__c/fields/EWS_Cases_Logged__c.field-meta.xml
<CustomField>
    <fullName>EWS_Cases_Logged__c</fullName>
    <inlineHelpText>The number of support cases logged for P2-3 only in the last 3 months (rolling 90 days)</inlineHelpText>
    <label>Cases Raised (Not P1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>