force-app/main/default/objects/EWS__c/fields/EWS_Cases_Logged_Score__c.field-meta.xml
<CustomField>
    <fullName>EWS_Cases_Logged_Score__c</fullName>
    <label>Cases Logged Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>