force-app/main/default/objects/EWS__c/fields/EWS_Confidence__c.field-meta.xml
<CustomField>
    <fullName>EWS_Confidence__c</fullName>
    <inlineHelpText>Our level of Customer Feedback we have received through surveys for Customer Health Score calculations</inlineHelpText>
    <label>Customer Feedback Factor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>