force-app/main/default/objects/EWS__c/fields/EWS_Issues_Register__c.field-meta.xml
<CustomField>
    <fullName>EWS_Issues_Register__c</fullName>
    <inlineHelpText>The total number of customer services cases logged by the escalation team in the last 18 months</inlineHelpText>
    <label>Issues Register Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>