force-app/main/default/objects/EWS__c/fields/EWS_Issues_Register_Open__c.field-meta.xml
<CustomField>
    <fullName>EWS_Issues_Register_Open__c</fullName>
    <inlineHelpText>The total number of customer services cases that are currently open</inlineHelpText>
    <label>Escalations Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>