force-app/main/default/objects/EWS__c/fields/EWS_Issues_Register_Score__c.field-meta.xml
<CustomField>
    <fullName>EWS_Issues_Register_Score__c</fullName>
    <label>Issues Register Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>