force-app/main/default/objects/EWS__c/fields/EWS_Latest_NPS__c.field-meta.xml
<CustomField>
    <fullName>EWS_Latest_NPS__c</fullName>
    <inlineHelpText>The last bi-annual NPS score</inlineHelpText>
    <label>Biannual NPS Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>