force-app/main/default/objects/EWS__c/fields/EWS_Number_of_OS_Cases_Score__c.field-meta.xml
<CustomField>
    <fullName>EWS_Number_of_OS_Cases_Score__c</fullName>
    <label>Number of Open Cases Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>