force-app/main/default/objects/EWS__c/fields/EWS_Number_of_Outstanding_Cases__c.field-meta.xml
<CustomField>
    <fullName>EWS_Number_of_Outstanding_Cases__c</fullName>
    <inlineHelpText>The current number of open or outstanding support cases</inlineHelpText>
    <label>Open Support Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>