force-app/main/default/objects/EWS__c/fields/EWS_Old_Debt__c.field-meta.xml
<CustomField>
    <fullName>EWS_Old_Debt__c</fullName>
    <inlineHelpText>The total amount of debt outstanding over 60 days</inlineHelpText>
    <label>Aged Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>