force-app/main/default/objects/EWS__c/fields/EWS_Old_Debt_Score__c.field-meta.xml
<CustomField>
    <fullName>EWS_Old_Debt_Score__c</fullName>
    <label>Old Debt Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>