force-app/main/default/objects/EWS__c/fields/EWS_Open_Bugs__c.field-meta.xml
<CustomField>
    <fullName>EWS_Open_Bugs__c</fullName>
    <inlineHelpText>The total number of outstanding development cases (including bugs) for this customer</inlineHelpText>
    <label>Dev Cases Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>