force-app/main/default/objects/EWS__c/fields/EWS_Portal_Engagement__c.field-meta.xml
<CustomField>
    <fullName>EWS_Portal_Engagement__c</fullName>
    <inlineHelpText>The number of logins within the last 30 days to the customer portal</inlineHelpText>
    <label>Customer Portal Engagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>