force-app/main/default/objects/EWS__c/fields/EWS_Project_NPS__c.field-meta.xml
<CustomField>
    <fullName>EWS_Project_NPS__c</fullName>
    <inlineHelpText>The NPS score provided post project</inlineHelpText>
    <label>Flightpath Scores</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>