force-app/main/default/objects/EWS__c/fields/EWS_PSAT__c.field-meta.xml
<CustomField>
    <fullName>EWS_PSAT__c</fullName>
    <inlineHelpText>The latest product NPS score obtained from the support survey within the last 6 months</inlineHelpText>
    <label>Product NPS</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>