force-app/main/default/objects/EWS__c/fields/EWS_Renewal_Perc_DNR__c.field-meta.xml
<CustomField>
    <fullName>EWS_Renewal_Perc_DNR__c</fullName>
    <inlineHelpText>The total percentage of the overall contract value that is set to DNR</inlineHelpText>
    <label>Contract Do Not Renew %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>