force-app/main/default/objects/EWS__c/fields/EWS_Support_CSAT__c.field-meta.xml
<CustomField>
    <fullName>EWS_Support_CSAT__c</fullName>
    <inlineHelpText>The average support customer satisfaction score over the last 6 months</inlineHelpText>
    <label>CSAT Last 9 Months</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>