force-app/main/default/objects/EWS__c/fields/EWS_Support_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>EWS_Support_CSAT_Score__c</fullName>
    <label>Support CSAT Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>