force-app/main/default/objects/EWS__c/fields/Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Experience_Score__c</fullName>
    <inlineHelpText>The experience health score is 1 of the 4 categories of the customer health score that is calculated by looking at data points based on customer feedback or engagement</inlineHelpText>
    <label>Experience Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>