force-app/main/default/objects/EWS__c/fields/Interactions_Opps_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Interactions_Opps_last_12_months__c</fullName>
    <label>Interactions (Opps) last 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>