force-app/main/default/objects/EWS__c/fields/Is_Premier__c.field-meta.xml
<CustomField>
    <fullName>Is_Premier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Premier</label>
    <type>Checkbox</type>
</CustomField>