force-app/main/default/objects/EWS__c/fields/Last_Successful_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Renewal__c</fullName>
    <label>Last Successful Renewal</label>
    <type>Date</type>
</CustomField>