force-app/main/default/objects/EWS__c/fields/Last_Win_Loss_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Win_Loss_Date__c</fullName>
    <label>Last Win/Loss Date</label>
    <type>Date</type>
</CustomField>