force-app/main/default/objects/EWS__c/fields/Mean_Case_Open_Time_Not_P1__c.field-meta.xml
<CustomField>
    <fullName>Mean_Case_Open_Time_Not_P1__c</fullName>
    <label>Mean Case Open Time (Not P1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>