force-app/main/default/objects/EWS__c/fields/Number_of_Prime_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Prime_Products__c</fullName>
    <label>Number of Prime Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>