force-app/main/default/objects/EWS__c/fields/Open_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Open_Bugs__c</fullName>
    <label>Open Bugs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>