force-app/main/default/objects/EWS__c/fields/Open_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Open_Pipeline__c</fullName>
    <inlineHelpText>The total amount the customer may be willing to purchase with Access as part of a sales opportunity</inlineHelpText>
    <label>Open Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>