force-app/main/default/objects/EWS__c/fields/Open_Pipeline_Relative_to_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Open_Pipeline_Relative_to_Contract_Value__c</fullName>
    <label>Open Pipeline Relative to Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>