force-app/main/default/objects/EWS__c/fields/P1_Cases_Raised__c.field-meta.xml
<CustomField>
    <fullName>P1_Cases_Raised__c</fullName>
    <label>P1 Cases Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>