force-app/main/default/objects/EWS__c/fields/Portal_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Portal_Engagement_Score__c</fullName>
    <label>Portal Engagement Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>