force-app/main/default/objects/EWS__c/fields/Product_Churn__c.field-meta.xml
<CustomField>
    <fullName>Product_Churn__c</fullName>
    <label>Product Churn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>