force-app/main/default/objects/EWS__c/fields/Product_Score__c.field-meta.xml
<CustomField>
    <fullName>Product_Score__c</fullName>
    <inlineHelpText>The product health score is 1 of the 4 categories of the customer health score that is calculated by looking at product or development data points</inlineHelpText>
    <label>Product Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>