force-app/main/default/objects/EWS__c/fields/Snapshot_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Datetime__c</fullName>
    <label>Snapshot Datetime</label>
    <type>DateTime</type>
</CustomField>