force-app/main/default/objects/EWS__c/fields/Success_Plan__c.field-meta.xml
<CustomField>
    <fullName>Success_Plan__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Success Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>