force-app/main/default/objects/EWS__c/fields/Support_PSAT__c.field-meta.xml
<CustomField>
    <fullName>Support_PSAT__c</fullName>
    <label>Support PSAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>