force-app/main/default/objects/EWS__c/fields/Wootics_Score__c.field-meta.xml
<CustomField>
    <fullName>Wootics_Score__c</fullName>
    <label>Wootrics Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>